# Innotter

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  entrypoint_celery.sh  pyproject.toml  requirements.txt  settings.py  setup_localstack.sh
innotter/: settings.py
innotter/innotter/: __init__.py  aws.py  celery.py  producer.py  settings.py  urls.py
innotter/mainapp/: admin.py  models.py  permissions.py  routers.py  serializers.py  tasks.py  urls.py  utils.py  views.py
innotter/mainapp/migrations/: 0001_initial.py  0002_initial.py  0003_page_is_blocked.py  0004_remove_post_reply_to.py  0005_post_reply_to.py  0006_alter_post_reply_to.py  0007_post_likers.py
innotter/users/: admin.py  backends.py  models.py  permissions.py  routers.py  serializers.py  urls.py  utils.py  views.py
innotter/users/migrations/: 0001_initial.py  0002_alter_user_role.py
mainapp/: admin.py  models.py
stat/app/: Dockerfile  consumer.py  entrypoint.sh  main.py  models.py  requirements.txt  settings.py  tabledef.json  utils.py
users/: admin.py  models.py
