[tool.poetry]
name = "innotter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
python-dotenv = "^0.20.0"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
PyJWT = "^2.4.0"
pip = "^22.2"
install = "^1.3.5"
boto3 = "^1.24.43"
django-storages = "^1.12.3"
Pillow = "^9.2.0"
celery = "^5.2.7"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pika = "^1.3.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pytest-mock = "^3.8.2"
aio-pika = "^8.1.1"
requests = "^2.28.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
